# gaussianprocess

./: data.txt  gaussianprocess.cabal  stack.yaml
src/: Main.hs
